# GitSync

./: .gitattributes  .gitignore  README.md  pubspec.yaml  untranslated.txt
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: FEATURE_REQUEST.yaml
.github/workflows/: generate-apk-release.yml
.maestro/auth/: https.yaml
.maestro/common/: clear_state.yaml  disable_all_files_access.yaml
.maestro/generate_screenshots/: auto_sync_settings.yaml  homepage.yaml  manual_sync.yaml  merge_conflict.yaml  quick_sync_settings.yaml  scheduled_sync_settings.yaml  select_apps.yaml  settings.yaml  settings_top.yaml  tile_sync_settings.yaml
.maestro/onboarding/: negative.yaml
.maestro/settings/: positive.yaml
.maestro/src/: generate_screenshots.rs
android/: build.gradle  gradle.properties
android/app/: build.gradle
app/: build.gradle.kts
ios/: Podfile  untranslated.txt
ios/ForceSyncWidget/: ForceSyncWidget.swift
ios/ManualSyncWidget/: ManualSyncWidget.swift
ios/Runner/: Info.plist  SyncNowIntent.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: gitsync_service.dart  global.dart  main.dart
lib/api/: accessibility_service_helper.dart  ai_chat_service.dart  ai_completion_service.dart  ai_stream_client.dart  ai_system_prompt.dart  ai_tools.dart  ai_tools_file.dart  ai_tools_git.dart  ai_tools_provider.dart  colour_provider.dart  helper.dart  issue_template_parser.dart  logger.dart
lib/constant/: colors.dart  dimens.dart  langDiff.dart  (+4 more)
rust/: Cargo.toml  cargokit.yaml
rust/src/: frb_generated.rs
rust/src/api/: git_manager.rs  mod.rs
(+208 files in other folders)
