[package]
name = "rust_lib_GitSync"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = { version = "=2.11.1" }
git2 = { version = "0.20.2" }
ssh-key = { version = "0.6.7", features = ["crypto", "encryption"] }
osshkeys = "0.7.0"
regex = "1.10.2"
libssh2-sys = { version = "0.3.1" }
nix = { version = "0.30.1", features = ["fs", "process"] }
uuid = {version = "0.8", features = [
    "v4",
]}


[features]
default = ["vendored"]
vendored = ["git2/vendored-libgit2", "git2/vendored-openssl"]
zlib-ng-compat = ["libssh2-sys/zlib-ng-compat"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
